--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
 
     <div id="extraBotones">
-      <button id="verCandidatos">Ver candidatos</button>
-      <button id="verCandidatos">Ver votaciones</button>
+      <button id="verCandidatosBtn">Ver candidatos</button>
+      <button id="verVotacionesBtn">Ver votaciones</button>
       </div>
 </body>
 
